# mcp-execution

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  LICENSE.md  README.md  SECURITY.md  deny.toml
.github/: codecov.yml  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md
crates/mcp-bridge/: Cargo.toml
crates/mcp-bridge/benches/: cache_benchmark.rs
crates/mcp-bridge/src/: lib.rs
crates/mcp-bridge/tests/: integration_test.rs
crates/mcp-cli/: Cargo.toml  README.md
crates/mcp-cli/src/: actions.rs  cli.rs  formatters.rs  lib.rs  main.rs  runner.rs
crates/mcp-cli/src/commands/: cache.rs  common.rs  completions.rs  config.rs  debug.rs  execute.rs  generate.rs  introspect.rs  mod.rs  plugin.rs  server.rs  setup.rs  skill.rs  stats.rs
crates/mcp-cli/src/commands/skill/: mod.rs  test.rs
crates/mcp-cli/tests/: cli_integration_test.rs  plugin_integration_test.rs  skill_integration_test.rs
crates/mcp-codegen/: Cargo.toml  README.md
crates/mcp-codegen/benches/: categorization_tokens.rs  code_generation.rs  multi_file_generation.rs
crates/mcp-codegen/data/: categorization_dictionary.yaml
crates/mcp-codegen/examples/: profile_generation.rs  token_report.rs
crates/mcp-codegen/src/: generator.rs  lib.rs  template_engine.rs  types.rs  typescript.rs
crates/mcp-codegen/src/claude_agent/: generator.rs  mod.rs  types.rs  zod.rs
crates/mcp-codegen/src/common/: mod.rs  types.rs  typescript.rs
crates/mcp-codegen/src/progressive/: generator.rs  mod.rs  types.rs
crates/mcp-codegen/src/skills/: category_generator.rs  claude.rs  converter.rs  dictionary.rs  llm_categorizer.rs  manifest_generator.rs  mod.rs  orchestrator.rs  script_generator.rs
crates/mcp-codegen/src/wasm/: generator.rs  mod.rs
crates/mcp-codegen/templates/: index.ts.hbs  tool.ts.hbs  types.ts.hbs
crates/mcp-codegen/templates/claude/: reference.md.hbs  skill.md.hbs
crates/mcp-codegen/templates/claude_agent/: index.ts.hbs  server.ts.hbs  tool.ts.hbs
crates/mcp-codegen/templates/progressive/: index.ts.hbs  runtime-bridge.ts.hbs  tool.ts.hbs
crates/mcp-codegen/templates/skills/: category.md.hbs  manifest.yaml.hbs  skill_categorized.md.hbs  skill_multifile.md.hbs  tool_script.ts.hbs
crates/mcp-codegen/templates/wasm/: manifest.json.hbs
crates/mcp-codegen/tests/: claude_templates_test.rs  edge_cases_test.rs  integration_test.rs  progressive_generation.rs  skill_generation_integration.rs
crates/mcp-codegen/tests/security/: dos.rs  mod.rs
crates/mcp-core/: Cargo.toml  README.md
crates/mcp-core/examples/: type_sizes.rs
crates/mcp-core/src/: cache_manager.rs  cli.rs  command.rs  config.rs  error.rs  lib.rs  metadata.rs  server_config.rs  skill_bundle.rs  skill_category.rs  stats.rs  types.rs
crates/mcp-core/src/traits/: cache.rs  executor.rs  mod.rs  state.rs
crates/mcp-core/tests/: categorized_bundle_tests.rs  category_manifest_tests.rs  security_edge_cases.rs  send_sync_tests.rs  skill_category_tests.rs
crates/mcp-core/tests/security/: mod.rs  path_traversal.rs  yaml_injection.rs
crates/mcp-examples/: Cargo.toml  README.md
crates/mcp-examples/benches/: e2e_benchmark.rs
crates/mcp-examples/examples/: codegen.rs  e2e_workflow.rs  performance_test.rs  plugin_workflow.rs  skill_workflow.rs  test_github.rs  test_vkteams.rs  token_analysis.rs
crates/mcp-examples/src/: lib.rs  metrics.rs  mock_server.rs  token_analysis.rs
crates/mcp-examples/tests/: integration_test.rs
crates/mcp-files/: Cargo.toml  README.md
crates/mcp-files/benches/: filesystem_export.rs  vfs_benchmarks.rs
crates/mcp-files/examples/: profile_memory.rs
crates/mcp-files/src/: builder.rs  filesystem.rs  lib.rs  types.rs  vfs.rs
crates/mcp-files/tests/: integration_filesystem.rs
crates/mcp-introspector/: Cargo.toml  README.md
crates/mcp-introspector/benches/: serialization_benchmark.rs
crates/mcp-introspector/src/: lib.rs
crates/mcp-introspector/tests/: integration_test.rs  timeout_test.rs
crates/mcp-introspector/tests/fixtures/: slow_mcp_server.rs
crates/mcp-plugin-store/: Cargo.toml
crates/mcp-plugin-store/benches/: concurrent.rs  large_vfs.rs
crates/mcp-plugin-store/src/: checksum.rs  error.rs  lib.rs  store.rs  types.rs
crates/mcp-server/: Cargo.toml  README.md
crates/mcp-server/src/: clock.rs  lib.rs  main.rs  service.rs  state.rs  types.rs
crates/mcp-server/src/skill/: context.rs  mod.rs  parser.rs  template.rs
crates/mcp-server/tests/: integration_tests.rs  skill_tests.rs
crates/mcp-skill/: Cargo.toml  README.md
crates/mcp-skill-generator/: Cargo.toml
crates/mcp-skill-generator/src/: generator.rs  lib.rs  skill_template.rs  template_engine.rs  types.rs
crates/mcp-skill-generator/src/tests/: mod.rs  security.rs
crates/mcp-skill-generator/templates/: skill.yaml.hbs
crates/mcp-skill-store/: Cargo.toml
crates/mcp-skill-store/benches/: concurrent.rs  large_vfs.rs  wasm_sizes.rs
crates/mcp-skill-store/src/: checksum.rs  error.rs  lib.rs  store.rs  types.rs  validation.rs
crates/mcp-skill-store/tests/: claude_format_tests.rs  integration.rs
crates/mcp-skill-store/tests/security/: mod.rs  permissions.rs
crates/mcp-skill/src/: context.rs  lib.rs  parser.rs  template.rs  types.rs
crates/mcp-skill/src/templates/: skill-generation.hbs  skill-md.hbs
crates/mcp-vfs/: Cargo.toml
crates/mcp-vfs/benches/: filesystem_export.rs  vfs_benchmarks.rs
crates/mcp-vfs/examples/: profile_memory.rs
crates/mcp-vfs/src/: builder.rs  filesystem.rs  lib.rs  types.rs  vfs.rs
crates/mcp-vfs/tests/: integration_filesystem.rs
crates/mcp-wasm-runtime/: Cargo.toml
crates/mcp-wasm-runtime/benches/: execution_benchmark.rs
crates/mcp-wasm-runtime/examples/: README.md  host_logging.rs  simple_execution.rs  stats_demo.rs
crates/mcp-wasm-runtime/src/: cache.rs  compiler.rs  host_functions.rs  lib.rs  monitor.rs  sandbox.rs  security.rs
crates/mcp-wasm-runtime/tests/: integration_test.rs  performance_test.rs  security_test.rs
crates/mcp-wasm-runtime/tests/wasm/: simple_test.wat
examples/: SKILL.md  (+3 more)
(+41 files in other folders)
