[workspace]
members = [
    "crates/mcp-bridge",
    "crates/mcp-cli",
    "crates/mcp-codegen",
    "crates/mcp-core",
    "crates/mcp-examples",
    "crates/mcp-introspector",
    "crates/mcp-skill-store",
    "crates/mcp-skill-generator",
    "crates/mcp-vfs",
    "crates/mcp-wasm-runtime",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.89"
authors = ["MCP Execution Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bug-ops/mcp-execution"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
blake3 = "1.8"
chrono = "0.4"
clap = "4.5"
clap_complete = "4.5"
colored = "3.0"
console = "0.16"
criterion = "0.7"
dialoguer = "0.12"
dirs = "6.0"
handlebars = "6.3"
human-panic = "2.0"
indicatif = "0.18"
lru = "0.16"
mcp-bridge = { path = "crates/mcp-bridge" }
mcp-codegen = { path = "crates/mcp-codegen" }
mcp-core = { path = "crates/mcp-core" }
mcp-introspector = { path = "crates/mcp-introspector" }
mcp-skill-store = { path = "crates/mcp-skill-store" }
mcp-skill-generator = { path = "crates/mcp-skill-generator" }
mcp-vfs = { path = "crates/mcp-vfs" }
mcp-wasm-runtime = { path = "crates/mcp-wasm-runtime" }
mockall = "0.14"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.12"
reqwest = "0.12"
rmcp = "0.9"
secrecy = "0.10"
serde = "1.0"
serde_json = "1.0"
syn = "2.0"
tempfile = "3.23"
thiserror = "2.0"
tokio = "1.48"
tokio-util = "0.7"
toml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
uuid = "1.18"
walkdir = "2.5"
wasmtime = "39.0"
wasmtime-wasi = "39.0"
wat = "1.241"
which = "8.0"

[workspace.lints.rust]
missing_debug_implementations = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
cargo_common_metadata = { level = "allow", priority = 10 }
multiple_crate_versions = { level = "allow", priority = 10 }
needless_borrows_for_generic_args = { level = "allow", priority = 10 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
too_many_lines = { level = "allow", priority = 10 }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Default bench profile - for profiling with flamegraph and accurate measurements
[profile.bench]
inherits = "release"
debug = true
incremental = false       # Better sccache compatibility (improves cache hits from 42% to 55-65%)

# Fast bench profile - for CI and quick development iterations
# Usage: cargo bench --no-run --profile bench-fast
[profile.bench-fast]
inherits = "release"
codegen-units = 16        # Parallel compilation (40-50% faster builds)
lto = false               # Skip link-time optimization
debug = false             # Skip debug symbols
incremental = false       # Better sccache compatibility

[profile.dev]
opt-level = 0
debug = true
