[workspace]
members = [ "crates/*" ]
default-members = [ "crates/*" ]
resolver = "2"

[workspace.package]
version = "0.6.4"
edition = "2024"
rust-version = "1.89"
authors = ["Andrei G <k05h31@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bug-ops/mcp-execution"
homepage = "https://github.com/bug-ops/mcp-execution"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
clap = "4.5"
clap_complete = "4.5"
colored = "3.0"
criterion = "0.8"
dhat = "0.3"
dialoguer = "0.12"
dirs = "6.0"
handlebars = "6.4"
mcp-execution-codegen = { path = "crates/mcp-codegen", version = "0.6.4" }
mcp-execution-core = { path = "crates/mcp-core", version = "0.6.4" }
mcp-execution-files = { path = "crates/mcp-files", version = "0.6.4" }
mcp-execution-introspector = { path = "crates/mcp-introspector", version = "0.6.4" }
mcp-execution-server = { path = "crates/mcp-server", version = "0.6.4" }
mcp-execution-skill = { path = "crates/mcp-skill", version = "0.6.4" }
rayon = "1.11"
regex = "1.12"
rmcp = "0.12"
schemars = "1.2"
serde = "1.0"
serde_json = "1.0"
static_assertions = "1.1"
tempfile = "3.24"
thiserror = "2.0"
tokio = "1.49"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.19", features = ["v4", "serde"] }
which = "8.0"

[workspace.lints.rust]
missing_debug_implementations = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
cargo_common_metadata = { level = "allow", priority = 10 }
multiple_crate_versions = { level = "allow", priority = 10 }
needless_borrows_for_generic_args = { level = "allow", priority = 10 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
too_many_lines = { level = "allow", priority = 10 }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Default bench profile - for profiling with flamegraph and accurate measurements
[profile.bench]
inherits = "release"
debug = true
incremental = false       # Better sccache compatibility (improves cache hits from 42% to 55-65%)

# Fast bench profile - for CI and quick development iterations
# Usage: cargo bench --no-run --profile bench-fast
[profile.bench-fast]
inherits = "release"
codegen-units = 16        # Parallel compilation (40-50% faster builds)
lto = false               # Skip link-time optimization
debug = false             # Skip debug symbols
incremental = false       # Better sccache compatibility

[profile.dev]
opt-level = 0
debug = true
