[package]
name = "mcp-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
mcp-core.workspace = true
rmcp.workspace = true

# Caching
lru.workspace = true

# Hashing
blake3.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
mockall.workspace = true
criterion.workspace = true

[[bench]]
name = "cache_benchmark"
harness = false
