[package]
name = "mcp-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
lru.workspace = true
mcp-core.workspace = true
rmcp = { workspace = true, features = ["client", "transport-child-process"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync", "process"] }
tracing.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
tokio = { workspace = true, features = ["test-util", "macros"] }
