[package]
name = "mcp-execution-cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Command-line interface for MCP Code Execution"
homepage = "https://github.com/bug-ops/mcp-execution"
keywords = ["mcp", "cli", "execution", "wasm", "tools"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lints]
workspace = true

[[bin]]
name = "mcp-execution-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive", "env", "cargo", "color"] }
clap_complete.workspace = true
colored.workspace = true
dialoguer.workspace = true
dirs.workspace = true
mcp-bridge.workspace = true
mcp-codegen = { workspace = true, features = ["skills"] }
mcp-core.workspace = true
mcp-introspector.workspace = true
mcp-skill-store.workspace = true
mcp-wasm-runtime = { workspace = true, features = ["cli"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
wasmtime.workspace = true
which.workspace = true

[dev-dependencies]
tempfile.workspace = true
wat.workspace = true
