[package]
name = "mcp-execution-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for MCP progressive loading code generation"
keywords = ["mcp", "cli", "codegen", "progressive-loading"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lints]
workspace = true

[[bin]]
name = "mcp-execution-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "cargo", "color"] }
clap_complete.workspace = true
colored = { workspace = true }
criterion = { workspace = true }
dhat = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
mcp-execution-codegen = { workspace = true }
mcp-execution-core = { workspace = true }
mcp-execution-introspector = { workspace = true }
mcp-execution-files = { workspace = true }
mcp-execution-skill = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
which = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
