[package]
name = "mcp-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = ["wasm"]
wasm = []
skills = []
all = ["wasm", "skills"]

[dependencies]
chrono = { workspace = true, features = ["serde"] }
handlebars.workspace = true
mcp-core.workspace = true
mcp-introspector.workspace = true
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = "0.9"
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
mcp-vfs.workspace = true

[[bench]]
name = "code_generation"
harness = false

[[bench]]
name = "multi_file_generation"
harness = false

[[bench]]
name = "categorization_tokens"
harness = false
