[package]
name = "mcp-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
handlebars.workspace = true
mcp-core.workspace = true
mcp-introspector.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
mcp-files.workspace = true

[[bench]]
name = "code_generation"
harness = false
