[package]
name = "mcp-execution-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types, traits, and error handling for MCP execution"
keywords = ["mcp", "execution", "core", "types"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dirs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
