[package]
name = "mcp-examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
mcp-bridge.workspace = true
mcp-codegen.workspace = true
mcp-core.workspace = true
mcp-introspector.workspace = true
mcp-skill-store.workspace = true
mcp-vfs.workspace = true
mcp-wasm-runtime.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[[example]]
name = "test_github"
path = "examples/test_github.rs"

[[example]]
name = "codegen"
path = "examples/codegen.rs"

[[example]]
name = "e2e_workflow"
path = "examples/e2e_workflow.rs"

[[example]]
name = "token_analysis"
path = "examples/token_analysis.rs"

[[example]]
name = "performance_test"
path = "examples/performance_test.rs"

[[bench]]
name = "e2e_benchmark"
harness = false
