[package]
name = "mcp-introspector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mcp-core.workspace = true
rmcp = { workspace = true, features = ["client", "transport-child-process"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process"] }
tracing.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
tokio = { workspace = true, features = ["test-util", "macros"] }
