[package]
name = "mcp-execution-introspector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP server introspection and tool discovery using rmcp SDK"
keywords = ["mcp", "introspection", "rmcp", "tools"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
mcp-execution-core.workspace = true
rmcp = { workspace = true, features = ["client", "transport-child-process"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process"] }
tracing.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
tokio = { workspace = true, features = ["test-util", "macros"] }
