[package]
name = "mcp-plugin-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
blake3.workspace = true
chrono = { workspace = true, features = ["serde"] }
mcp-core.workspace = true
mcp-vfs.workspace = true
secrecy.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
walkdir.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros"] }

[[bench]]
name = "large_vfs"
harness = false

[[bench]]
name = "concurrent"
harness = false

[[bench]]
name = "wasm_sizes"
harness = false
