[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "MCP server for generating progressive loading TypeScript files"
keywords = ["mcp", "server", "codegen", "progressive-loading"]
categories = ["development-tools"]

[[bin]]
name = "mcp-execution"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dirs = { workspace = true }
mcp-codegen = { workspace = true }
mcp-core = { workspace = true }
mcp-files = { workspace = true }
mcp-introspector = { workspace = true }
mcp-skill = { workspace = true }
regex = { workspace = true }
rmcp = { workspace = true, features = ["server", "transport-io", "macros"] }
schemars = { workspace = true, features = ["uuid1", "chrono04"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "sync",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
