[package]
name = "mcp-execution-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP server for progressive loading TypeScript code generation"
keywords = ["mcp", "server", "codegen", "progressive-loading"]
categories = ["development-tools"]

[[bin]]
name = "mcp-execution"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dirs = { workspace = true }
mcp-execution-codegen = { workspace = true }
mcp-execution-core = { workspace = true }
mcp-execution-files = { workspace = true }
mcp-execution-introspector = { workspace = true }
mcp-execution-skill = { workspace = true }
regex = { workspace = true }
rmcp = { workspace = true, features = ["server", "transport-io", "macros"] }
schemars = { workspace = true, features = ["uuid1", "chrono04"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "sync",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
