[package]
name = "mcp-skill-generator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Generate Claude Code skills from MCP servers"
keywords = ["mcp", "claude", "code-generation", "skills"]
categories = ["development-tools"]
readme = "../../README.md"

[dependencies]
# Internal dependencies
mcp-core.workspace = true
mcp-introspector.workspace = true

# External dependencies
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
handlebars.workspace = true
chrono = { workspace = true, features = ["serde"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
