[package]
name = "mcp-skill-generator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Generate IDE skills from MCP servers"
keywords = ["mcp", "code-generation", "skills"]
categories = ["development-tools"]
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
mcp-codegen.workspace = true
mcp-core.workspace = true
mcp-introspector.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
