[package]
name = "mcp-skill-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
blake3.workspace = true
chrono = { workspace = true, features = ["serde"] }
dirs.workspace = true
mcp-codegen = { workspace = true, features = ["skills"] }
mcp-core.workspace = true
mcp-vfs.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
walkdir.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "large_vfs"
harness = false

[[bench]]
name = "concurrent"
harness = false

[[bench]]
name = "wasm_sizes"
harness = false
