[package]
name = "mcp-skill"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Skill generation for MCP progressive loading"
keywords = ["mcp", "skill", "codegen"]
categories = ["development-tools"]

[dependencies]
mcp-core = { workspace = true }
regex = { workspace = true }
handlebars = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
dirs = { workspace = true }

[lints]
workspace = true
