[package]
name = "mcp-execution-skill"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SKILL.md generation for Claude Code integration with MCP tools"
keywords = ["mcp", "skill", "claude-code", "codegen"]
categories = ["development-tools"]

[dependencies]
mcp-execution-core = { workspace = true }
regex = { workspace = true }
handlebars = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
dirs = { workspace = true }

[lints]
workspace = true
