[package]
name = "mcp-vfs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mcp-codegen.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dependencies.dhat]
version = "0.3"
optional = true

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
tempfile.workspace = true

[features]
dhat-heap = ["dhat"]

[[bench]]
name = "vfs_benchmarks"
harness = false

[[example]]
name = "profile_memory"
required-features = ["dhat-heap"]
