[package]
name = "mcp-wasm-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mcp-core.workspace = true
mcp-bridge.workspace = true
# mcp-vfs.workspace = true  # TODO: Implement mcp-vfs
# mcp-codegen.workspace = true  # Not needed for runtime

# WASM runtime
wasmtime.workspace = true
wasmtime-wasi.workspace = true

# Caching
blake3.workspace = true
lru.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Logging
tracing.workspace = true

# Filesystem
tempfile.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
criterion.workspace = true
wat.workspace = true                                                 # WAT to WASM converter for tests
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
default = ["assemblyscript"]
assemblyscript = []
quickjs = []

[[bench]]
name = "execution_benchmark"
harness = false
