[package]
name = "mcp-wasm-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
lru.workspace = true
mcp-bridge.workspace = true
mcp-core.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing.workspace = true
wasmtime.workspace = true

[dev-dependencies]
criterion.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
wat.workspace = true

[features]
default = ["assemblyscript"]
assemblyscript = []
quickjs = []

[[bench]]
name = "execution_benchmark"
harness = false
